objects/CMPL123CME__EU_MIR__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Device_Operator_At_Event__c</fullName>
        <description>Indicate who was operating the device at the time of the event: healthcare professional, patient, other: please describe the operator if none of the provided options are applicable.</description>
        <inlineHelpText>Indicate who was operating the device at the time of the event: healthcare professional, patient, other: please describe the operator if none of the provided options are applicable.</inlineHelpText>
        <label>Device Operator At Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare professional</fullName>
                </value>
                <value>
                    <fullName>Patient/lay user</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Usage_Other__c</fullName>
        <description>Describe the usage if none of the provided options are applicable. Select Other and describe. Compassionate / humanitarian use (Medtech Europe to provide further IVD usage examples).</description>
        <inlineHelpText>Please describe the usage if none of the provided options are applicable. Select Other and describe.</inlineHelpText>
        <label>Device Usage Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Usage__c</fullName>
        <description>Indicate the usage of the device at the time the incident occurred e.g. IVDs need to choose "reuse of a reusable medical device ". Please describe the usage if none of the provided options are applicable. Select Other and describe.</description>
        <inlineHelpText>Indicate the usage of the device at the time the incident occurred.</inlineHelpText>
        <label>Device Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>Reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/refurbished/fully refurbished</fullName>
                </value>
                <value>
                    <fullName>Problem noted prior use</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__EUDAMED_ID_Of_PMCF_PMPF_Investigation__c</fullName>
        <description>If the incident occured during a PMCF/PMPF investigation then you must fill this out. The word 'studies' is generally used for PMCF/PMPF however the MDR refers to this as 'investigation'.</description>
        <inlineHelpText>If the incident occurred within a PMCF/ PMPF investigation; please provide the Eudamed ID of that PMCF/PMPF investigation.</inlineHelpText>
        <label>EUDAMED ID of PMCF/PMPF investigation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EUDAMED_Number_Of_NCA__c</fullName>
        <description>Unique Eudamed number of NCA (could be auto filled/selected once Eudamed available).</description>
        <inlineHelpText>Unique Eudamed number of NCA (could be auto filled/selected once Eudamed available).</inlineHelpText>
        <label>EUDAMED number of NCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EUDAMED_S_FSCA_Reference_Number__c</fullName>
        <description>EUDAMED's FSCA reference number</description>
        <label>EUDAMED's FSCA reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__EUDAMED_S_Reference_Number__c</fullName>
        <description>EUDAMED's reference number</description>
        <label>EUDAMED's reference number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__E_Clinical_Signs_Symptoms_Code_Choice_1__c</fullName>
        <label>E-Clinical Signs Symptoms Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__E_Clinical_Signs_Symptoms_Code_Choice_2__c</fullName>
        <label>E-Clinical Signs Symptoms Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__E_Clinical_Signs_Symptoms_Code_Choice_3__c</fullName>
        <label>E-Clinical Signs Symptoms Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expected_Date_Of_Next_Report__c</fullName>
        <description>The date by which you expect to be able to submit your next report on this event. This may be either a Follow-Up or Final report.</description>
        <inlineHelpText>The date by which you expect to be able to submit your next report on this event. This may be either a Follow-Up or Final report.</inlineHelpText>
        <label>Expected date of next report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explain_If_Component_Code_Missing__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF Component code is missing, briefly explain.</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF Component code is missing, briefly explain.</inlineHelpText>
        <label>Explain if Component Code missing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explain_If_Investigation_Code_Missing__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF Investigation code is missing, briefly explain.</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF Investigation code is missing, briefly explain.</inlineHelpText>
        <label>Explain if Investigation Code missing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explain_Incident_If_IMDRF_Code_Missing__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain.</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF term is missing in Annex E and F, briefly explain.</inlineHelpText>
        <label>Explain Incident if IMDRF code missing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explant_Facility__c</fullName>
        <description>The healthcare facility where the device was explanted.</description>
        <inlineHelpText>The healthcare facility where the device was explanted.</inlineHelpText>
        <label>Explant facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F_Health_Impact_Code_Choice_1__c</fullName>
        <label>F-Health Impact Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F_Health_Impact_Code_Choice_2__c</fullName>
        <label>F-Health Impact Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__F_Health_Impact_Code_Choice_3__c</fullName>
        <label>F-Health Impact Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Final_Comments_from_Mfr_Investigation__c</fullName>
        <description>Enter your final comments on this incident for cause investigation and conclusion.
If you refer to an existing CAPA please provide the reference or identification number of that CAPA.</description>
        <inlineHelpText>Enter your final comments on this incident for cause investigation and conclusion.
If you refer to an existing CAPA please provide the reference or identification number of that CAPA.</inlineHelpText>
        <label>Final Comments from Mfr Investigation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Firmware_Version__c</fullName>
        <description>The value given by the applicant to identify a specific revision of the firmware (including SaMD) (IMDRF).</description>
        <inlineHelpText>The value given by the applicant to identify a specific revision of the firmware (including SaMD) (IMDRF).</inlineHelpText>
        <label>Firmware version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__G_Component_Code_Choice_1__c</fullName>
        <label>G-Component Code-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__G_Component_Code_Choice_2__c</fullName>
        <label>G-Component Code-Choice 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__G_Component_Code_Choice_3__c</fullName>
        <label>G-Component Code-Choice 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Gender_Of_Patient__c</fullName>
        <description>Gender of the Patient.</description>
        <inlineHelpText>Gender of the Patient.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__General_Comments__c</fullName>
        <description>Please use this section for any further comments or information that has not already been provided in the earlier sections of this report form.</description>
        <inlineHelpText>Please use this section for any further comments or information that has not already been provided in the earlier sections of this report form.</inlineHelpText>
        <label>General Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Has_The_Risks_Assessment_Been_Reviewed__c</fullName>
        <description>Indicate if the risk assessment has been reviewed after this incident and provide a rationale. Also indicate if the risk assessment is still adequate with your rationale.</description>
        <inlineHelpText>Indicate if the risk assessment has been reviewed after this incident and provide a rationale. Also indicate if the risk assessment is still adequate with your rationale.</inlineHelpText>
        <label>Has the risks assessment been reviewed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_Facility_Report_Number__c</fullName>
        <description>The report reference number used by the healthcare facility concerned when they reported the incident.</description>
        <inlineHelpText>The report reference number used by the healthcare facility concerned when they reported the incident.</inlineHelpText>
        <label>Healthcare facility report number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__How_Were_Incidents_Devices_Determined__c</fullName>
        <description>Add any additional information here.</description>
        <inlineHelpText>Add any additional information here.</inlineHelpText>
        <label>How Were Incidents/Devices Determined?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__IMDRF_Code_Missing__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain.</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF term is missing in Annex A, briefly explain.</inlineHelpText>
        <label>Explain Incident if IMDRF code missing</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__IMDRF_Codes_Not_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Codes other than IMDRF code is used.</description>
        <inlineHelpText>Any other code used.</inlineHelpText>
        <label>IMDRF codes not used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__IVDD_Class__c</fullName>
        <description>Indicate the relevant Device Class for the medical device to which this report refers.</description>
        <inlineHelpText>Indicate the relevant Device Class for the medical device to which this report refers.</inlineHelpText>
        <label>IVDD Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVD Annex II List A</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List B</fullName>
                </value>
                <value>
                    <fullName>IVD devices for self-testing</fullName>
                </value>
                <value>
                    <fullName>IVD general</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__IVDR_Class_Type__c</fullName>
        <description>IVDR fields set up according to proposal in EUDAMED.
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI (except for custom-made device which will not have a Basic UDI-DI).</description>
        <inlineHelpText>IVDR fields set up according to proposal in EUDAMED. 
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI except for custom-made devices.</inlineHelpText>
        <label>IVDR Class Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>CMPL123CME__IVDR_Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Self-testing</fullName>
                </value>
                <value>
                    <fullName>Near-patient testing</fullName>
                </value>
                <value>
                    <fullName>Professional testing</fullName>
                </value>
                <value>
                    <fullName>Companion diagnostic</fullName>
                </value>
                <value>
                    <fullName>Reagent</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Instrument</fullName>
                </value>
                <value>
                    <fullName>Sterile conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__IVDR_Class__c</fullName>
        <description>IVDR fields set up according to proposal in EUDAMED.The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI (except for custom-made device which will not have a Basic UDI-DI).</description>
        <inlineHelpText>IVDR fields set up according to proposal in EUDAMED. 
The information will be attached to the UDI (Basic UDI-DI) in the UDI database, therefore it will come automatically with the Basic UDI-DI except for custom-made devices.</inlineHelpText>
        <label>IVDR Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>class D</fullName>
                </value>
                <value>
                    <fullName>class C</fullName>
                </value>
                <value>
                    <fullName>class B</fullName>
                </value>
                <value>
                    <fullName>class A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Initial_Reporter_Is_Other_Specify__c</fullName>
        <description>If role of initial reporter is 'Other', please specify.</description>
        <inlineHelpText>If role of initial reporter is 'Other', please specify.</inlineHelpText>
        <label>If initial reporter is 'Other', specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_No_Reason_For_No_Review_Required__c</fullName>
        <description>Review of the risk assessment.</description>
        <inlineHelpText>Select 'No', if the review is inadequate.</inlineHelpText>
        <label>If 'No', Reason for No Review Required</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Other_Describe_Criteria__c</fullName>
        <description>Describe the other criteria.</description>
        <label>If Other, describe criteria</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Others_Elaborate_Similar_Incidents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enter description of what similar incidents are based on and the rationale why the above codes were not used.</description>
        <label>If Others, Elaborate Similar Incidents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__If_Yes_Is_Review_Adequate__c</fullName>
        <description>Review of the risk assessment.</description>
        <inlineHelpText>Select 'Yes', if the review is adequate.</inlineHelpText>
        <label>If 'Yes', Is Review Adequate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Implant_Facility__c</fullName>
        <description>The healthcare facility where the device was implanted.</description>
        <inlineHelpText>The healthcare facility where the device was implanted.</inlineHelpText>
        <label>Implant facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__In_house_medical_device_problem_Choice_1__c</fullName>
        <label>In-house medical device problem-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__In_house_root_cause_evaluation_Choice_1__c</fullName>
        <label>In-house root cause evaluation-Choice 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Incident_Description__c</fullName>
        <description>Describe the incident/event including any relevant information that might impact the understanding or evaluation of the adverse event. This should cover the first observable event or possibly a later secondary but more serious event, or maybe both. Describe the condition/outcome of a patient after the event, including the degree of wellness and the need for continuing care, medication, support, counselling, or education.</description>
        <inlineHelpText>Describe incident/event including any relevant information that might impact the understanding or evaluation of the adverse event such as what went wrong with the device or description of the health effects, i.e. clinical signs, symptoms, conditions etc.</inlineHelpText>
        <label>Incident Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Indicate_Month__c</fullName>
        <description>Provide the Month according to the selection</description>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Indicate_Year__c</fullName>
        <description>Provide the Year according to the selection</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Actions_Taken_By_Manufacturer__c</fullName>
        <description>Details of initial corrective and/or preventive actions implemented by the manufacturer. Please add N/A if not applicable yet.</description>
        <inlineHelpText>Details of initial corrective and/or preventive actions implemented by the manufacturer. Please add N/A if not applicable yet.</inlineHelpText>
        <label>Initial actions taken by manufacturer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Address_Complement__c</fullName>
        <description>The address of the initial reporter.</description>
        <inlineHelpText>The address of the initial reporter.</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_City_Name__c</fullName>
        <description>The name of the city initial reporter.</description>
        <inlineHelpText>The name of the city initial reporter.</inlineHelpText>
        <label>City name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Contact_First_Name__c</fullName>
        <description>The name of the contact at the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</description>
        <inlineHelpText>The name of the contact at the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</inlineHelpText>
        <label>Contact first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Contact_Last_Name__c</fullName>
        <description>The name of the contact at the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</description>
        <inlineHelpText>The name of the contact at the healthcare facility where this event occurred. If this incident did not occur in a health care facility you don’t need to fill out this field.</inlineHelpText>
        <label>Contact last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Country__c</fullName>
        <description>The country of the initial reporter where this event occurred. If this event did not occur in a health care facility put the origin of the country of the report.</description>
        <inlineHelpText>The country of the initial reporter where this event occurred. If this event did not occur in a health care facility put the origin of the country of the report.</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Åland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antartica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Email__c</fullName>
        <description>The email address for the initial reporter.</description>
        <inlineHelpText>The email address for the initial reporter.</inlineHelpText>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_P_O_Box__c</fullName>
        <description>The P.O box of the initial reporter.</description>
        <inlineHelpText>The P.O box of the initial reporter.</inlineHelpText>
        <label>P.O Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Phone__c</fullName>
        <description>The telephone number for the initial reporter.</description>
        <inlineHelpText>The telephone number for the initial reporter.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Postcode__c</fullName>
        <description>The postal or zip code of the initial reporter.</description>
        <inlineHelpText>The postal or zip code of the initial reporter.</inlineHelpText>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Street_Number__c</fullName>
        <description>The street number of the initial reporter.</description>
        <inlineHelpText>The street number of the initial reporter.</inlineHelpText>
        <label>Street number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_Reporter_Street__c</fullName>
        <description>The street of the initial reporter.</description>
        <inlineHelpText>The street of the initial reporter.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Investigation_Finding_Code_Annex_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Codes Belonging to Annexure C Investigation Findings.</description>
        <inlineHelpText>Annexure C Codes for Investigation Findings.</inlineHelpText>
        <label>Investigation Finding Code (Annex C)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Is_Root_Cause_Confirmed__c</fullName>
        <description>Please indicate if there is evidence of a causal link to the medical device problem.</description>
        <inlineHelpText>Please indicate if there is evidence of a causal link to the medical device problem.</inlineHelpText>
        <label>Is root cause confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__List_Down_Further_Investigations__c</fullName>
        <description>Provide details of any further investigations you plan to undertake to reach the root cause. Please add N/A if not applicable yet.</description>
        <inlineHelpText>Provide details of any further investigations you plan to undertake to reach the root cause. Please add N/A if not applicable yet.</inlineHelpText>
        <label>List down further investigations planned</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Lot_Batch_Numbers__c</fullName>
        <description>The Lot/batch number(s) for the medical device to which this report refers.</description>
        <inlineHelpText>The Lot/batch number(s) for the medical device to which this report refers.</inlineHelpText>
        <label>Lot/batch number(s)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__MDD_AIMDD_Class__c</fullName>
        <description>Indicate the relevant Device Class for the medical device to which this report refers.</description>
        <inlineHelpText>Indicate the relevant Device Class for the medical device to which this report refers.</inlineHelpText>
        <label>MDD/AIMDD Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>active implant</fullName>
                </value>
                <value>
                    <fullName>class III</fullName>
                </value>
                <value>
                    <fullName>class IIb</fullName>
                </value>
                <value>
                    <fullName>class IIa</fullName>
                </value>
                <value>
                    <fullName>class I</fullName>
                </value>
                <value>
                    <fullName>class Is</fullName>
                </value>
                <value>
                    <fullName>class Im</fullName>
                </value>
                <value>
                    <fullName>class Ism</fullName>
                </value>
                <value>
                    <fullName>custom-made</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>